Tue Feb  8 14:40:49 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/*: added a new page differences.html giving details
	  about the differences and extensions between FAM and gamin.

Tue Feb  8 11:24:00 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS doc/gamin.html doc/news.html gamin.spec.in: finishing
	  release of 0.0.23
	* python/gamin.py: rolling back the chnge to the bindings,
	  since it made python bindings semantic diverge from the C
	  level with risk of recursion problems.

Mon Feb  7 18:34:25 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in: preparing 0.0.23
	* libgamin/fam.h libgamin/gam_api.c libgamin/gam_data.c 
	  libgamin/gam_data.h libgamin/gam_protocol.h
	  libgamin/gamin_sym.version: adding defines and an API to
	  avoid Exists and EndExists events being generated,
	  also avoid pushing those in case of reconnect
	* server/gam_connection.c server/gam_subscription.[ch]:
	  this impacts also the server part a bit
	* python/gamin.c python/gamin.py: added the API at the
	  server level.
	* python/tests/Makefile.am python/tests/basic.py 
	  python/tests/noexists.py tests/Makefile.am: added a specific
	  test and some cleanups.

Fri Feb  4 15:34:29 CET 2005 Daniel Veillard <veillard@redhat.com>

	* python/gamin.py: adding self.handle_events() in watch_file and
	  watch_directory to avoid deadlocks.

2005-02-01  Mark McLoughlin  <mark@skynet.ie>

	* python/gamin.c: (get_connection), (get_request): memset
	the newly re-alloced memory rather than the previous memory.

Mon Jan 31 09:07:19 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in gamin.spec.in doc/*.html: made release
	  0.0.22, updated the docs.

Sat Jan 29 20:28:36 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c: another patch from John McCutchan

Fri Jan 28 23:04:47 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c: inotify 0.18 patch from John McCutchan
