@@ -1,3 +1,8 @@
+Thu Feb 10 23:49:42 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* server/gam_inotify.c server/local_inotify.h: applied 
+	  inotify-0.19 patch from John McCutchan 
+
 Tue Feb  8 14:40:49 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* doc/*: added a new page differences.html giving details
